k8s/apps/wallos/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallos
  namespace: wallos
  labels:
    app.kubernetes.io/name: wallos
  annotations:
    secret.reloader.stakater.com/reload: wallos-oidc
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wallos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallos
    spec:
      containers:
        - name: wallos
          image: bellamy/wallos:5.8.3@sha256:0006879778f31a962a3873f7682514b92a3c7665dcbc4764fcc241ad968eaccd
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/www/html/db
              subPath: db
            - name: data
              mountPath: /var/www/html/images/uploads/logos
              subPath: logos
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "256Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallos-data
---
apiVersion: v1
kind: Service
metadata:
  name: wallos
  namespace: wallos
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: wallos
  ports:
    - port: 80
      targetPort: 80
      name: http
